force-app/main/default/objects/SSP_ApplicationIndividual__c/SSP_ApplicationIndividual__c.object-meta.xml
<CustomObject>
    <description>Custom junction object to maintain association between member and application</description>
    <label>SSP ApplicationIndividual</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SSP_ApplicationIndividual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSP ApplicationIndividuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>