force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/BlockedCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>BlockedCaseNumber__c</fullName>
    <description>Used to store blocked Case number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Blocked Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>