force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorAddressLine1__c</fullName>
    <description>Care Coordinator Address Line 1 used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Address Line 1</label>
    <type>TextArea</type>
</CustomField>