force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorAddressLine2__c</fullName>
    <description>Care Coordinator Address Line 2 used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Address Line 2</label>
    <type>TextArea</type>
</CustomField>