force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorCity__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorCity__c</fullName>
    <description>Care Coordinator City used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>