force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorCountyCode__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorCountyCode__c</fullName>
    <description>Care Coordinator County Code used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator County Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>