force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorName__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>