force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorPhoneNumber__c</fullName>
    <description>Care Coordinator Phone Number used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Phone Number</label>
    <type>Phone</type>
</CustomField>