force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorRelationship__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorRelationship__c</fullName>
    <description>Used for CIS</description>
    <label>Care Coordinator Relationship</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
                <sorted>true</sorted>
            
                <value>
                
                    <fullName>CC</fullName>
                
                
                    <label>Care Coordinator</label>
                
                </value>
            
                <value>
                
                    <fullName>FM</fullName>
                
                
                    <label>Family Member</label>
                
                </value>
            
                <value>
                
                    <fullName>NF</fullName>
                
                
                    <label>Nursing Facility</label>
                
                </value>
            
                <value>
                
                    <fullName>OC</fullName>
                
                
                    <label>Other Caregiver</label>
                
                </value>
            
                <value>
                
                    <fullName>P</fullName>
                
                
                    <label>Provider</label>
                
                </value>
            
                <value>
                
                    <fullName>R</fullName>
                
                
                    <label>Relative</label>
                
                </value>
            
                <value>
                
                    <fullName>SL</fullName>
                
                
                    <label>Self</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>