force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorStateCode__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorStateCode__c</fullName>
    <description>Care Coordinator StateCode used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>