force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorZipcode4__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorZipcode4__c</fullName>
    <description>Care Coordinator Zipcode 4 used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Zipcode 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>