force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CareCoordinatorZipcode5__c.field-meta.xml
<CustomField>
    <fullName>CareCoordinatorZipcode5__c</fullName>
    <description>Care Coordinator Zipcode 5 used in CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Coordinator Zipcode 5</label>
    <length>15</length>
    <type>Text</type>
</CustomField>