force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CaretakerName__c.field-meta.xml
<CustomField>
    <fullName>CaretakerName__c</fullName>
    <description>Used for Caretake service</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caretaker Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>