force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CaretakerPhone__c.field-meta.xml
<CustomField>
    <fullName>CaretakerPhone__c</fullName>
    <description>Used for Caretaker services</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caretaker Phone</label>
    <type>Phone</type>
</CustomField>