force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CaretakerRelation__c.field-meta.xml
<CustomField>
    <fullName>CaretakerRelation__c</fullName>
    <description>Used to denote Caretaker Relationship</description>
    <label>Caretaker Relation</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
                <sorted>true</sorted>
            
                <value>
                
                    <fullName>CH</fullName>
                
                
                    <label>Child</label>
                
                </value>
            
                <value>
                
                    <fullName>NR</fullName>
                
                
                    <label>Not Related</label>
                
                </value>
            
                <value>
                
                    <fullName>OR</fullName>
                
                
                    <label>Other Relative</label>
                
                </value>
            
                <value>
                
                    <fullName>PA</fullName>
                
                
                    <label>Parent</label>
                
                </value>
            
                <value>
                
                    <fullName>SP</fullName>
                
                
                    <label>Spouse</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>