force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CaretakerServiceIndividualId__c.field-meta.xml
<CustomField>
    <fullName>CaretakerServiceIndividualId__c</fullName>
    <description>Used for tracking InvidualId of CaretakerService</description>
    <externalId>true</externalId>
    <label>CaretakerServiceIndividualId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>