force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CISEndDate__c.field-meta.xml
<CustomField>
    <fullName>CISEndDate__c</fullName>
    <description>Used for CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIS End Date</label>
    <type>Date</type>
</CustomField>