force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/CISStartDate__c.field-meta.xml
<CustomField>
    <fullName>CISStartDate__c</fullName>
    <description>Used for CIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIS Start Date</label>
    <type>Date</type>
</CustomField>