force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/DCCareCoordinatorAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCCareCoordinatorAddressId__c</fullName>
    <description>Address Id from Care Coordinator Address Id</description>
    <externalId>true</externalId>
    <label>DC Care Coordinator AddressId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>