force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/DCCareTakerIntegrationSupplementationId__c.field-meta.xml
<CustomField>
    <fullName>DCCareTakerIntegrationSupplementationId__c</fullName>
    <description>Used as DCIndividualCommunityIntegrationSupplementationId for Caretaker Service</description>
    <externalId>true</externalId>
    <label>DCCareTakerIntegrationSupplementationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>