force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/DCCareTakerServiceId__c.field-meta.xml
<CustomField>
    <fullName>DCCareTakerServiceId__c</fullName>
    <description>Used as DCCareTakerServiceId for Caretaker Service</description>
    <externalId>true</externalId>
    <label>DCCareTakerServiceId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>