force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/DCCISntegrationSupplementationId__c.field-meta.xml
<CustomField>
    <fullName>DCCISntegrationSupplementationId__c</fullName>
    <description>Used as DCIndividualCommunityIntegrationSupplementationId for CIS</description>
    <externalId>true</externalId>
    <label>DCCISntegrationSupplementationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>