force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/DCPrograms__c.field-meta.xml
<CustomField>
    <fullName>DCPrograms__c</fullName>
    <description>This field is used to store existing programs for a member from Reverse SSP DC</description>
    <label>DC Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BenefitPrograms</valueSetName>
        
        </valueSet>
</CustomField>