force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsActiveIEESCasePresent__c.field-meta.xml
<CustomField>
    <fullName>IsActiveIEESCasePresent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate Whether an Active IEES case present or not</description>
    <label>IsActiveIEESCasePresent</label>
    <type>Checkbox</type>
</CustomField>