force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/isApplicationBlocked__c.field-meta.xml
<CustomField>
    <fullName>isApplicationBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Application is blocked</description>
    <label>isApplicationBlocked</label>
    <type>Checkbox</type>
</CustomField>