force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsCaretakerLivingTogetherToggle__c.field-meta.xml
<CustomField>
    <fullName>IsCaretakerLivingTogetherToggle__c</fullName>
    <description>Used for Caretaker service</description>
    <label>Is Caretaker Living Together</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>