force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsHeadOfHousehold__c.field-meta.xml
<CustomField>
    <fullName>IsHeadOfHousehold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the member is Head of Household</description>
    <label>Is Head Of Household</label>
    <type>Checkbox</type>
</CustomField>