force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/isHOHDetailsCompleted__c.field-meta.xml
<CustomField>
    <fullName>isHOHDetailsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to decide whether HOH Section details gave been completed or not</description>
    <label>is HOH Details Completed?</label>
    <type>Checkbox</type>
</CustomField>