force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsMemberStillOwnsExpenses__c.field-meta.xml
<CustomField>
    <fullName>IsMemberStillOwnsExpenses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if still owns checkbox is checked on Remove Existing Expense Screen</description>
    <label>Is Member Still Owns Expenses</label>
    <type>Checkbox</type>
</CustomField>