force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsMemberStillOwnsIncomes__c.field-meta.xml
<CustomField>
    <fullName>IsMemberStillOwnsIncomes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if still owns checkbox is checked on Remove Existing Income Screen</description>
    <label>Is Member Still Owns Incomes</label>
    <type>Checkbox</type>
</CustomField>