force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsMemberStillOwnsResources__c.field-meta.xml
<CustomField>
    <fullName>IsMemberStillOwnsResources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if still owns checkbox is checked on Remove Existing Resource Screen</description>
    <label>Is Member Still Owns Resources</label>
    <type>Checkbox</type>
</CustomField>