force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsNoChangesToExpenses__c.field-meta.xml
<CustomField>
    <fullName>IsNoChangesToExpenses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if no change checkbox is checked on Change Existing Expense Screen</description>
    <label>Is No Changes to Expenses</label>
    <type>Checkbox</type>
</CustomField>