force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsNoChangesToIncomes__c.field-meta.xml
<CustomField>
    <fullName>IsNoChangesToIncomes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if no change checkbox is checked on Change Existing Income Screen</description>
    <label>Is No Changes to Incomes</label>
    <type>Checkbox</type>
</CustomField>