force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsNoChangesToResources__c.field-meta.xml
<CustomField>
    <fullName>IsNoChangesToResources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if no change checkbox is checked on Change Existing Resource Screen</description>
    <label>Is No Changes to Resources</label>
    <type>Checkbox</type>
</CustomField>