force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsPreventedNursingFacilityToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPreventedNursingFacilityToggle__c</fullName>
    <description>Used for Caretaker service</description>
    <label>Is Prevented Nursing Facility</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>