force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsRACSNAPMealsRuleTriggered__c.field-meta.xml
<CustomField>
    <fullName>IsRACSNAPMealsRuleTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether an RAC Snap household meals rule is triggered for a particular member</description>
    <label>Is RAC SNAP Meals Rule Triggered</label>
    <type>Checkbox</type>
</CustomField>