force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsServiceProvidedSafelyToggle__c.field-meta.xml
<CustomField>
    <fullName>IsServiceProvidedSafelyToggle__c</fullName>
    <description>Used for caretaker service</description>
    <label>Is Service Provided Safely</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>