force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsServiceReceivedRegularlyToggle__c.field-meta.xml
<CustomField>
    <fullName>IsServiceReceivedRegularlyToggle__c</fullName>
    <description>Is used for Caretaker service</description>
    <label>Is Service Received Regularly</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>