force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsServiceStoppingInstitutalizationToggle__c.field-meta.xml
<CustomField>
    <fullName>IsServiceStoppingInstitutalizationToggle__c</fullName>
    <description>Used for CIS</description>
    <label>Is Service Stopping Institutalization</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>