force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/IsTaxRRCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsTaxRRCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the user has visited screen after review required is completed.</description>
    <label>Is Tax RR Completed</label>
    <type>Checkbox</type>
</CustomField>