force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MCIcount__c.field-meta.xml
<CustomField>
    <fullName>MCIcount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Store count for No.of MCI hits</description>
    <label>MCIcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>