force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MedicaidType__c.field-meta.xml
<CustomField>
    <fullName>MedicaidType__c</fullName>
    <description>Used to store type of Medicaid Program - Magi/Non Magi</description>
    <label>Medicaid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAGI</fullName>
            </value>
            <value>
                <fullName>Non-MAGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>