force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MemberProgramsApplied__c.field-meta.xml
<CustomField>
    <fullName>MemberProgramsApplied__c</fullName>
    <description>This field is used to store different types of programs member has applied on a particular application</description>
    <label>Member Programs Applied</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BenefitPrograms</valueSetName>
        
        </valueSet>
</CustomField>