force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MemberProgramsAppliedCopy__c.field-meta.xml
<CustomField>
    <fullName>MemberProgramsAppliedCopy__c</fullName>
    <description>Used to store/backup original programs when readonly user opens the application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MemberProgramsAppliedCopy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>