force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MemberStatus__c.field-meta.xml
<CustomField>
    <fullName>MemberStatus__c</fullName>
    <description>This field is used to determine the status of member</description>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>