force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MentalIllnessImpairsFunctioningToggle__c.field-meta.xml
<CustomField>
    <fullName>MentalIllnessImpairsFunctioningToggle__c</fullName>
    <description>Used for CIS</description>
    <label>Mental Illness Impairs Functioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>