force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/MentalIllnessNeedsTreatmentToggle__c.field-meta.xml
<CustomField>
    <fullName>MentalIllnessNeedsTreatmentToggle__c</fullName>
    <description>Used for CIS</description>
    <label>Mental Illness Needs Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>