force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/ProgramsApplied__c.field-meta.xml
<CustomField>
    <fullName>ProgramsApplied__c</fullName>
    <description>Different types of programs applied on an application for which this member is involved</description>
    <label>Application Programs Applied</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BenefitPrograms</valueSetName>
        
        </valueSet>
</CustomField>