force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDate__c</fullName>
    <description>This is used as Service End Date for Caretaker Service</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>