force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartDate__c</fullName>
    <description>This field is for Service Start Date of Caretaker</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>