force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/SSNRetryFlag__c.field-meta.xml
<CustomField>
    <fullName>SSNRetryFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field useful in MCI Merged Service.</description>
    <label>SSNRetryFlag</label>
    <type>Checkbox</type>
</CustomField>