force-app/main/default/objects/SSP_ApplicationIndividual__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <description>Indicates the application related to a member</description>
    <label>SSP_Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipName>SSP_ApplicationIndividuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>